--- a/app/views/create.html
+++ b/app/views/create.html
@@ -7,7 +7,26 @@
             <div class="md-padding">
                 <md-input-container>
                     <label for="user.userName"> User Name </label>
-                    <input type="text" ng-model="user.userName" required>
+                    <!-- <input type="text" ng-model="user.userName" required> -->
+                    <md-autocomplete
+                        md-no-cache="true"
+                        md-selected-item="selectedItem"
+                        md-search-text-change="searchTextChange(user.userName)"
+                        md-search-text="user.userName"
+                        md-selected-item-change="selectedItemChange(item)"
+                        md-items="item in querySearch(user.userName)"
+                        md-item-text="item.display"
+                        md-min-length="0"
+                        placeholder="User Name"
+                        flex    
+                    >
+                        <md-item-template>
+                            <span md-highlight-text="user.userName" md-highlight-flags="^i">{{item.display}}</span>
+                        </md-item-template>
+                        <md-not-found>
+                            
+                        </md-not-found>
+                    </md-autocomplete>
                 </md-input-container>
             </div>
             <div layout="row" class="md-padding">
