--- a/app/views/home.html
+++ b/app/views/home.html
@@ -30,6 +30,9 @@
                         Max Rating: {{selected.result.maxRating}}
                         Rank: {{selected.result.rank}}
                     </p>
+                    <canvas id="line" class="chart chart-line" chart-data="data"
+                    chart-labels="labels" chart-options="options" chart-dataset-override="datasetOverride">
+                    </canvas>
                     <!-- <md-button class="md-primary md-raised" ui-sref="edit" ui-sref-opts="{id: selectedIndex}"> Edit </md-button> -->
                     <md-button class="md-primary md-raised" href='/edit/{{selectedIndex}}'> Edit </md-button>
                     <md-button class="md-warn md-raised" ng-click="deleteUser()"> Delete </md-button>
