--- a/app/views/create.html
+++ b/app/views/create.html
@@ -41,7 +41,7 @@
             </div>
             <div layout="row">
                 <md-input-container style="margin: auto">
-                    <md-button type="submit" class="md-primary md-raised" ng-click="submitData()"> Submit </md-button>
+                    <md-button type="submit" class="md-primary md-raised"> Submit </md-button>
                 </md-input-container>
                 <md-input-container style="margin: auto">
                     <md-button class="md-primary md-raised" ui-sref="home"> Cancel </md-button>
