--- a/app/views/home.html
+++ b/app/views/home.html
@@ -6,6 +6,9 @@
         <md-button class="md-primary md-raised md-padding" ui-sref="create">
             Add User
         </md-button>
+        <md-button class="md-primary md-raised md-padding" ui-sref="compare">
+            Compare
+        </md-button>
         <h3> Angular Starter </h3>
     </md-toolbar>
     <div class="container" layout="row" flex>
